# book-info-chat

./: .gitignore  README.md  blueprint.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/routers/: books.py  chat.py
backend/app/schemas/: book.py  chat.py
backend/app/services/: chat.py  cinii.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  StreamingLogs.tsx
frontend/src/lib/: api.ts
